learn-kubernetes-minikube/exemples-network-policies/ex-06-block-all-allow-all/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec: 
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
