learn-kubernetes-minikube/exemples-network-policies/ex-06-block-all-allow-all/backend-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: backend-deny-all
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
